<resources>
	<string name="top_message">Welcome to Humansense!</string>
    <string name="app_name">Humansense</string>
    <string name="simple_classifier_notification_widget_name">Activity Classifier</string>
    <string name="location_status_widget_name">Location Status</string>
    <string name="location_cluster_labeler_dialog_label">Location Labeler</string>
    <string name="location_widget_moving_label">Currently Moving</string>
    <string name="location_widget_location_prefix">Currently in location:</string>
    <string name="location_widget_unknown_location">Unknown</string>
    <string name="widget_loading">Loading data</string>
    <string name="widget_error">Data currently unavailable</string>
    <string name="where_are_you_text">Where are you now?</string>
    <string name="location_labeler_widget_name">Location Labeler</string>
    <string name="location_labeler_prompt">Select a location</string>
    <string name="location_labeler_edittext_hint">example location</string>
    <string name="location_labeler_dialog_label">Where are you now?</string>
    <string name="notification_ticker">Humansense</string>
    <string name="notification_text">Select to provide more information.</string>
    <string name="notification_title">Humansense Unknown Activity</string>
    <string name="notification_upload_text">Uploading files to server&#8230;</string>
    <string name="notification_upload_title">Humansense Uploader</string>
    <string name="live_file_path">hsandroidapp/data/live/</string>
    <string name="recent_file_path">hsandroidapp/data/recent/</string>
    <string name="uploaded_file_path">hsandroidapp/data/uploaded/</string>
    <string name="activity_file_path">hsandroidapp/data/activity/</string>
    <string name="mag_graph_title">Select a section of the graph to add a label:</string>
    <string name="mag_graph_time_label">Time</string>
    <string name="mag_graph_magnitude_label">Activity</string>
    <string name="mag_graph_label_query">What were you doing in this time period?</string>
    <string name="mag_graph_label_hint">Enter an activity (e.g. jogging)</string>
    <string name="mag_graph_incorrect_input_toast">Please enter letters, dashes and apostrophes only.</string>
	<string name="mag_graph_legend_label">Legend</string>
	<string name="mag_graph_close_label">Close</string>
	<string name="model_ini_path">hsandroidapp/models/models.ini</string>
	<string name="models_path">hsandroidapp/models/</string>
	<string name="manage_model_files_pref_title">Manage Model Files</string>
	<string name="manage_model_files_pref_summary">Manage Model Files and choose which models to use for classification.</string>
	<string name="start_building_button_text">Build</string>
	<string name="stop_building_button_text">Stop Building</string>
	<string name="start_classifying_button_text">Classify</string>
	<string name="stop_classifying_button_text">Stop Classifying</string>
	<string name="start_label">START SERVICE</string>
	<string name="started_notification_text">Service Started</string>
	<string name="started_notification_title">HumanSense Service</string>
	<string name="started_notification_content">Service is Active.</string>
    <string name="stop_label">STOP SERVICE</string>
    <string name="upload_label">UPLOAD</string>
    <string name="uploading_label">UPLOADING&#8230;</string>
    <string name="upload_query">Upload data collected to online server?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file">file</string>
    <string name="files">files</string>
    <string name="deleted">deleted</string>
    <string name="delete">delete</string>
    <string name="Deleted">Deleted</string>
    <string name="Delete">Delete</string>
    <string name="unuploaded">unuploaded</string>
    <string name="uploader_appname_label">Humansense File Uploader:\n</string>
    <string name="uploader_no_errors_one_file">1 file was uploaded to server.</string>
    <string name="uploader_no_errors_multiple_files">files were uploaded to server.</string>
    <string name="uploader_unable_to_connect">Unable to connect to server.</string>
    <string name="uploader_upload_failed">One or more files have failed to upload.</string>
    <string name="uploader_no_new_files">No new files to upload.</string>
    <string name="uploader_no_connection">No connection could be found.</string>
    <string name="activity_magnitude_graph_label">Activity Recognition Graph</string>
    <string name="activity_file_manager_label">Humansense File Manager</string>
    <string name="empty_list_text">Empty List!</string>
    <string name="delete_checked_text">Delete Checked</string>
    <string name="no_results_text">Results Currently Unavailable</string>
	<string name="log_name_hint">example activity</string>
	<string name="startup_options_cat">Startup Options</string>
	<string name="auto_start_at_app_start_pref">Automatically start logging when application starts.</string>
	<string name="auto_start_at_app_start_pref_title">Auto-Start at App Start</string>
	<string name="auto_start_at_phone_boot_pref">Automatically start logging when phone starts.</string>
	<string name="auto_start_at_phone_boot_pref_title">Auto-Start at Phone Boot</string>
	<string name="log_to_file_pref">Log debugging output to a file.</string>
	<string name="log_to_file_pref_title">Log to file</string>
	<string name="battery_life_options_cat">Power Management Preferences</string>
	<string name="watch_for_low_battery_pref_title">Stop service on Low Battery</string>
	<string name="watch_for_low_battery_pref">Stops the service when the battery is low, and restarts once it has been charged.</string>
	<string name="settingString">Settings</string>
	<string name="uploadString">Upload</string>
    <string name="start_phone_boot_label">Start at phone boot.</string>
    <string name="no_start_phone_boot_label">Do not start at phone boot.</string>
    <string name="start_app_start_label">Start at application start.</string>
    <string name="no_start_app_start_label">Do not start at application start.</string>
    <string name="unuploaded_management">Manage Unuploaded Files</string>
	<string name="unuploaded_management_desc">Individually delete files that have not yet been uploaded to the server.</string>
	<string name="manage_unuploaded_files_title">Unuploaded Files</string>
	<string name="unuploaded_cat">Unuploaded Files</string>
	<string name="unuploaded_title">Delete Unuploaded Files</string>
	<string name="unuploaded_desc">Deletes all unuploaded files on your device.</string>
	<string name="delete_files_big_warning">Are you sure you wish to delete all unuploaded files?</string>
	<string name="delete_files_warning">Delete these files?</string>
	<string name="file_deleted">file has been deleted.</string>
	<string name="files_deleted">files have been deleted.</string>
	<string name="no_files_to_delete">No files to delete.</string>
    <string name="plugin_options_cat">Plugin Options</string>
    <string name="input_plugin_pref_title">Input Plugins</string>
    <string name="input_plugin_pref_description">Shows options for all input plugins installed with defined preferences.</string>
    <string name="output_plugin_pref_title">Output Plugins</string>
    <string name="output_plugin_pref_description">Shows options for all output plugins installed with defined preferences.</string>
    <string name="uploader_options_cat">Uploader Options</string>
    <string name="uploader_clear_data_title">Delete Uploaded Files</string>
    <string name="uploader_clear_data_desc">Deletes files already uploaded to the server.\n</string>
    <string name="uploader_auto_upload_title">Upload Automatically</string>
    <string name="uploader_auto_upload_desc">Automatically upload files whenever they are available.\n</string>
    <string name="uploader_only_use_wifi_title">Only Use Wi-Fi</string>
    <string name="uploader_only_use_wifi_desc">Files are only uploaded over Wi-Fi.\n</string>
    <string name="set_preferences">Preferences</string>
    <string name="set_input_preferences">Input Plugin Preferences</string>
    <string name="set_output_preferences">Output Plugin Preferences</string>
    <string name="bluetoothlogger_enable_pref_label">Bluetooth Plugin</string>
    <string name="bluetoothlogger_enable_pref_summary">Enables or disables this plugin.</string>
    <string name="bluetoothlogger_enable_pref_on">Bluetooth Logging is on.</string>
	<string name="bluetoothlogger_enable_pref_off">Bluetooth Logging is off.</string>
    <string name="bluetoothlogger_autoenable_pref_label">Bluetooth Auto-Enable</string>
    <string name="bluetoothlogger_autoenable_pref_summary">Auto-Enables the Bluetooth adapter when logging is started.</string>
    <string name="bluetoothlogger_autoenable_pref_on">Bluetooth will be Auto-Enabled when logging is started.</string>
	<string name="bluetoothlogger_autoenable_pref_off">Bluetooth will not be Auto-Enabled when logging is started.</string>
    <string name="bluetoothlogger_interval_pref">Bluetooth Logging Interval</string>
    <string name="bluetoothlogger_interval_pref_summary">The time interval between two subsequent scans.</string>
    <string name="gpslogger_enable_pref_label">GPS Logging Plugin</string>
    <string name="gpslogger_enable_pref_summary">Enables or disables this plugin.</string>
    <string name="gpslogger_enable_pref_on">GPS Logging is on.</string>
	<string name="gpslogger_enable_pref_off">GPS Logging is off.</string>
    <string name="gpslogger_interval_pref">GPS Logging Interval</string>
    <string name="gpslogger_interval_pref_summary">The time interval between two subsequent scans.</string>
    <string name="gpslogger_distance_pref">GPS Minimum Distance</string>
    <string name="gpslogger_distance_pref_summary">The minimum distance that has to be travelled between two subsequent scans.</string>
    <string name="gpslogger_timeout_pref">GPS Timeout</string>
    <string name="gpslogger_timeout_pref_summary">Amount of time after which we stop scanning if we cannot get a GPS fix.</string>
    <string name="gsmlogger_enable_pref_label">GSM Logging Plugin</string>
    <string name="gsmlogger_enable_pref_summary">Enables or disables this plugin.</string>
    <string name="gsmlogger_enable_pref_on">GSM Logging is on.</string>
	<string name="gsmlogger_enable_pref_off">GSM Logging is off.</string>
    <string name="sensorlogger_enable_pref_label">Sensor Logging Plugin</string>
    <string name="sensorlogger_enable_pref_summary">Enables or disables this plugin.</string>
    <string name="sensorlogger_enable_pref_on">Sensor Logging is on.</string>
	<string name="sensorlogger_enable_pref_off">Sensor Logging is off.</string>
    <string name="sensorlogger_interval_pref">Sensor Speed</string>
    <string name="sensorlogger_interval_pref_summary">The logging speed of the accelerometer.</string>
    <string name="sensorlogger_orientation_pref">Estimate Orientation</string>
    <string name="sensorlogger_orientation_pref_summary">Tries to estimate orientation using magnetic field sensors and acccelerometer. This is a fairly expensive computation, and gives fairly inaccurate results.</string>
    <string name="sensorlogger_orientation_pref_on">Orientation Estimation is enabled.</string>
    <string name="sensorlogger_orientation_pref_off">Orientation Estimation is disabled.</string>
    <string name="wifilogger_enable_pref_label">Wifi Logging Plugin</string>
    <string name="wifilogger_enable_pref_summary">Enables or disables this plugin.</string>
    <string name="wifilogger_enable_pref_on">Wifi Logging is on.</string>
	<string name="wifilogger_enable_pref_off">Wifi Logging is off.</string>
    <string name="wifilogger_interval_pref">Wifi Logging Interval</string>
	<string name="location_input_edittext_hint">location name (e.g., home, my office, etc.)</string>
</resources>